Now the code is buildable.

--- a/Source/packages/repositories.config
+++ b/Source/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\CRMLite.Core\packages.config" />
+  <repository path="..\CRMLite.Data\packages.config" />
+  <repository path="..\CRMLite.Infrastructure\packages.config" />
   <repository path="..\CRMLite.UI\packages.config" />
   <repository path="..\PropznetSuite.Core\packages.config" />
   <repository path="..\PropznetSuite.Data\packages.config" />
