--- a/Source/CRMLite.Core/CRMLite.Core.csproj
+++ b/Source/CRMLite.Core/CRMLite.Core.csproj
@@ -30,8 +30,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Auth.SingleTenant, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libs\Common.Auth.SingleTenant.dll</HintPath>
+    </Reference>
     <Reference Include="Common.Data">
       <HintPath>..\packages\Logiticks.Common.Data.1.0.6\lib\Common.Data.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Providers">
+      <HintPath>..\packages\Logiticks.Common.Providers.1.0.2\lib\Common.Providers.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Providers.Email">
+      <HintPath>..\packages\Logiticks.Common.Providers.Email.1.0.2\lib\Common.Providers.Email.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Settings">
+      <HintPath>..\packages\Logiticks.Common.Settings.1.0.1\lib\Common.Settings.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
@@ -39,8 +52,14 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="PropznetCommon.Features.CRM">
       <HintPath>..\Libs\PropznetCommon.Features.CRM.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.0.1\lib\net4\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
