--- a/Source/CRMLite.UI/CRMLite.UI.csproj
+++ b/Source/CRMLite.UI/CRMLite.UI.csproj
@@ -49,7 +49,8 @@
     <Reference Include="Autofac.Integration.Mvc">
       <HintPath>..\packages\Autofac.Mvc5.3.3.4\lib\net45\Autofac.Integration.Mvc.dll</HintPath>
     </Reference>
-    <Reference Include="Common.Auth.SingleTenant">
+    <Reference Include="Common.Auth.SingleTenant, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Libs\Common.Auth.SingleTenant.dll</HintPath>
     </Reference>
     <Reference Include="Common.Data, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
