--- a/Source/CRMLite.UI/Web.config
+++ b/Source/CRMLite.UI/Web.config
@@ -11,8 +11,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="CRMLite" connectionString="Data Source=.;Initial Catalog=CRMLite;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CRM_HangFire" connectionString="Data Source=.;Initial Catalog=CRM_HangFire;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CRMLite" connectionString="Data Source=Alex-PC;Initial Catalog=CRMLite;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CRM_HangFire" connectionString="Data Source=Alex-PC;Initial Catalog=CRM_HangFire;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
