--- a/Source/CRMLite.Core/CRMLite.Core.csproj
+++ b/Source/CRMLite.Core/CRMLite.Core.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\AccountResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\Data\IDataContext.cs" />
   </ItemGroup>
