--- a/Source/CRMLite.Core/CRMLite.Core.csproj
+++ b/Source/CRMLite.Core/CRMLite.Core.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\AccountResult.cs" />
+    <Compile Include="Models\LeadResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\Data\IDataContext.cs" />
   </ItemGroup>
