Implemented datamanager in potential.

--- a/Source/CRMLite.Core/CRMLite.Core.csproj
+++ b/Source/CRMLite.Core/CRMLite.Core.csproj
@@ -73,6 +73,7 @@
   <ItemGroup>
     <Compile Include="Models\AccountResult.cs" />
     <Compile Include="Models\LeadResult.cs" />
+    <Compile Include="Models\PotentialResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interfaces\Data\IDataContext.cs" />
   </ItemGroup>
