Added user html helper, and bugs fixed.

--- a/Source/CRMLite.Infrastructure/CRMLite.Infrastructure.csproj
+++ b/Source/CRMLite.Infrastructure/CRMLite.Infrastructure.csproj
@@ -94,6 +94,7 @@
     <Compile Include="PropznetSuitePrincipal.cs" />
     <Compile Include="PermissionChecker.cs" />
     <Compile Include="UserCoockieData.cs" />
+    <Compile Include="UserHTMLHelper.cs" />
     <Compile Include="UserInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
