Label * added in every views.

--- a/Source/CRMLite.UI/CRMLite.UI.csproj
+++ b/Source/CRMLite.UI/CRMLite.UI.csproj
@@ -420,6 +420,7 @@
     <Compile Include="Helpers\DynamicMenuRenderingHelper.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\LabelExtensionsAsteriskHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UnitOfWork.cs" />
