Fixed the connection string. Added gitignore file

--- a/Source/CRMLite.UI/Web.config
+++ b/Source/CRMLite.UI/Web.config
@@ -31,8 +31,8 @@
     <add key="ExceptionMode" value="debug"/>
   </appSettings>
   <connectionStrings>
-    <add name="CRMLite" connectionString="Data Source=.;Initial Catalog=CRMLite;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="CRM_HangFire" connectionString="Data Source=.;Initial Catalog=CRM_HangFire;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CRMLite" connectionString="Data Source=MOBLE-DESKTOP\SQLEXPRESS01;Initial Catalog=CRMLite;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="CRM_HangFire" connectionString="Data Source=MOBLE-DESKTOP\SQLEXPRESS01;Initial Catalog=CRM_HangFire;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
